# python-griddingmachine

./: .gitignore  README.md  bors.toml  pyproject.toml  setup.py
.github/workflows/: platform.yml  release.yml  version.yml
griddingmachine/: __init__.py
src/griddingmachine/: __init__.py
tests/: test_griddingmachine.py
